hphp/hack/test/typecheck/typeconsts/interface_override_trait2.php
<?hh


trait T1 {
  abstract const type T = int;
}

interface I {
  abstract const type T = string;
}

abstract class B implements I { use T1; }
